# baadiff

./: .gitignore  Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml  ports.yml
baadiff/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
demos/01-basic/: SCENARIO.md  patient_service.py
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md  INTEGRATIONS.md
ports/: README.md
ports/go/: go.mod  main.go  main_test.go
ports/javascript/: index.js  package.json  test.js
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
ports/shell/: baadiff.sh  test.sh
tests/: test_cli.py  test_connect.py  test_core_checks.py  test_ports.py  test_smoke.py
