[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-baadiff"
version = "0.4.0"
description = "Scan a repo or infra manifest for HIPAA Security Rule gaps and produce a Business Associate readiness scorecard."
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["cognis-digital", "cognis-neural-suite", "healthcare", "baadiff"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/baadiff"

[project.scripts]
"baadiff-emit" = "baadiff.connect:emit_main"
baadiff = "baadiff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["baadiff"]

[tool.hatch.metadata]
allow-direct-references = true
